--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "swr": "^1.2.2",
     "theme-ui": "^0.13.1"
   },
   "devDependencies": {
