pulling info properly

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "swr": "^1.2.2",
-    "theme-ui": "^0.13.1"
+    "theme-ui": "^0.13.1",
+    "twilio": "^2.11.1"
   },
   "devDependencies": {
     "eslint": "8.9.0",
