--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.8.1",
     "@emotion/styled": "^11.8.1",
     "@mdx-js/react": "^2.0.0",
+    "firebase": "^9.6.7",
     "framer-motion": "^6.2.7",
     "next": "12.1.0",
     "react": "17.0.2",
