--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "next": "12.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-firebase-hooks": "^5.0.3",
+    "react-firebaseui": "^6.0.0",
     "swr": "^1.2.2",
-    "theme-ui": "^0.13.1",
+    "theme-ui": "^0.12.0",
     "twilio": "^2.11.1"
   },
   "devDependencies": {
